Optimize DB / Add cross-chat / stream / without ignore system (incomplete)